test/runtime/fail/block/missing_brace_nested.hy

// expect error: Expected `}` to close `{`, found end of file

{
	let a = 3
	{
		let b = 4
		let c = 5
}
